created a "eraser" white color

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <div id="lighter" class="color">
 
             </div>
+            <div id="eraser" class="color">
+
+            </div>
         </div>
     </header>
     <main>
