added option to paint continuosly and option to lock colors
thanks to wan for the continuous painting tips.

--- a/index.html
+++ b/index.html
@@ -21,19 +21,26 @@
             <div id="darker" class="color selected">
 
             </div>
-            <div id="dark" class="color">
+            <div class="color">
 
             </div>
-            <div id="light" class="color">
+            <div class="color">
 
             </div>
-            <div id="lighter" class="color">
+            <div class="color">
+
+            </div>
+            <div class="color">
+
+            </div>
+            <div class="color">
 
             </div>
             <div id="eraser" class="color">
 
             </div>
         </div>
+        <p id="color-alert">Caso queira travar uma cor, clique nela duas vezes!</p>
     </header>
     <main>
         <section id="buttons-and-inputs">
@@ -76,6 +83,11 @@
             </div>
         </div>
     </main>
+    <footer>
+        <br>
+        Criado por <a href="https://github.com/guillepinho">Guille Pinho</a> <br>
+        Agradecimento a <a href="https://github.com/wanlucas">Wan</a>.
+    </footer>
     <script src="script.js"></script>
 </body>
 
