--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     </main>
     <footer>
         <br>
-        Criado por <a href="https://github.com/guillepinho">Guille Pinho</a> <br>
-        Agradecimento a <a href="https://github.com/wanlucas">Wan</a>.
+        Criado por <a href="https://github.com/guillepinho" target="_blank">Guille Pinho</a> <br>
+        Agradecimento a <a href="https://github.com/wanlucas" target="_blank">Wan</a>.
     </footer>
     <script src="script.js"></script>
 </body>
